--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
-    "dev": " node --watch -r ts-node/register ./src/server.ts"
+    "dev": " node --watch -r ts-node/register ./src/server.ts",
+    "build": "tsup src",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +23,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "tsup": "^8.0.2"
   }
 }
